--- a/mobirise/index.html
+++ b/mobirise/index.html
@@ -68,7 +68,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="info2 cid-rXIivHD4h0" id="info2-z">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="info2 cid-rXIivHD4h0" id="info2-z">
 
     
 
@@ -216,7 +216,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                 <div class="form-block" data-form-type="formoid">
                     <h3 class="form-title mbr-fonts-style mbr-white mbr-light mbr-pt-1 mbr-pb-3 display-5">Подпишитесь на новостную рассылку</h3>
                     <h4 class="mbr-fonts-style form-subtitle mbr-white display-7">Первыми получайте последние новости по проекту</h4>
-                    <form class="mbr-form mbr-pt-2" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p+qnPoI6fWSTAb/Rzw1F0rjqfdPuiV7KRHukLR+N5eaK8Zs0zuDtxGOaAfMaWIOUecniBYZ3a+tLjsqlCPbuR7Fs977wSWz5VXHnjlmv2uHJe9e692zsHLKIK8uQYamN">
+                    <form class="mbr-form mbr-pt-2" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H1m1d9lE9nWMHc+ql5J4nDABevGvtPUaTBR3TUiKF0fjOlp0qKSJVQvFx1yz20QNovhZU4WNLYiuwZzDp1gZIMHGDuS9QSo4pzy4w19Bik/jercmQREKpPXrU59U655r">
                         <div class="mbr-form-row">
                             <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                                 <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
