turbify amp to turbo

--- a/mobirise/vacancies.html
+++ b/mobirise/vacancies.html
@@ -65,7 +65,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content1 cid-rZehmQMhp8" id="content1-2i">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content1 cid-rZehmQMhp8" id="content1-2i">
 
     
 
@@ -150,7 +150,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
 
         <div class="mbr-row mbr-jc-c mbr-pt-4">
             <div class="mbr-col-lg-7 mbr-col-md-10 mbr-col-sm-12" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jC1FMh1THkefJIQRiuLVjzO6xmij5/foJEgxS2SDd6WDMv9Y0cLZYnUUDfFh+BA79Hf7e3ehaMPG51pvyJuHkEIDHNkyn0SiVC1ro0Y1NlF2CUTdxyoatO5lNVnt8xDy">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gsFqushu967emFdeGihR68Ju7aR/NGuIv0KNX9E9dJDWUiJ7ymOz/ELGXesq3rxXBRZGxkFeYtPlwgcosfOIfdYygLrgb5oTMh1F+qpUP8KFHJuWlJEjQGgeIXINt3Wr">
                     <div class="mbr-form-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Сообщение отправлено</template>
