--- a/mobirise/manifest.html
+++ b/mobirise/manifest.html
@@ -63,7 +63,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section content1 cid-rZef4NKPEK" id="content1-2f">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content1 cid-rZef4NKPEK" id="content1-2f">
 
     
 
@@ -139,7 +139,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
 
     <div class="container">
         <div class="image-block mbr-m-auto">
-            <amp-img src="assets/images/4x.png" layout="responsive" width="731" height="731" alt="Mobirise" class="mobirise-loader">
+            <amp-img src="assets/images/4x.png" layout="responsive" width="399" height="399" alt="Mobirise" class="mobirise-loader">
                 <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
