--- a/mobirise/index.html
+++ b/mobirise/index.html
@@ -62,7 +62,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="info2 cid-rXIivHD4h0" id="info2-z">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="info2 cid-rXIivHD4h0" id="info2-z">
 
     
 
@@ -208,7 +208,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                 <div class="form-block" data-form-type="formoid">
                     <h3 class="form-title mbr-fonts-style mbr-white mbr-light mbr-pt-1 mbr-pb-3 display-5">Подпишитесь на новостную рассылку</h3>
                     <h4 class="mbr-fonts-style form-subtitle mbr-white display-7">Первыми получайте последние новости</h4>
-                    <form class="mbr-form mbr-pt-2" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="25lMR5FxXg8WF8f4Ms1j8/a+DUblMufK1etpCBEYdOk01v7C+meeoqMjGY6XxcL3wLm+yNIfEVLZWnxBjEJOJLgPJLffFgfV3RTHP34B2Xnij26Pp1f/P1QBFL7XWrtz">
+                    <form class="mbr-form mbr-pt-2" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wu/dFj9Rx9pxxkEP50Kdz4iuV711RerMwRtI9/X8OSq/TntXqmzRP2aCrbdyUM/W5jUG4KseezIfmlxnlMb0gh44y0sAwYTM0VVPjBtVunySvxkF/mx+d3rrV7rwmkM0">
                         <div class="mbr-form-row">
                             <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                                 <template data-form-alert="" type="amp-mustache">Оформление успешно!</template>
@@ -238,7 +238,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="image-block mbr-col-sm-12 mbr-col-md-3">
-                <amp-img src="assets/images/logo-4-512x256.png" layout="responsive" width="258.8203125" height="162" alt="logo" class="mobirise-loader">
+                <amp-img src="assets/images/logo-4-512x256.png" layout="responsive" width="252.4296875" height="158" alt="logo" class="mobirise-loader">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
