--- a/mobirise/index.html
+++ b/mobirise/index.html
@@ -62,7 +62,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="info2 cid-rXIivHD4h0" id="info2-z">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="info2 cid-rXIivHD4h0" id="info2-z">
 
     
 
@@ -208,7 +208,7 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
                 <div class="form-block" data-form-type="formoid">
                     <h3 class="form-title mbr-fonts-style mbr-white mbr-light mbr-pt-1 mbr-pb-3 display-5">Подпишитесь на новостную рассылку</h3>
                     <h4 class="mbr-fonts-style form-subtitle mbr-white display-7">Первыми получайте последние новости</h4>
-                    <form class="mbr-form mbr-pt-2" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wu/dFj9Rx9pxxkEP50Kdz4iuV711RerMwRtI9/X8OSq/TntXqmzRP2aCrbdyUM/W5jUG4KseezIfmlxnlMb0gh44y0sAwYTM0VVPjBtVunySvxkF/mx+d3rrV7rwmkM0">
+                    <form class="mbr-form mbr-pt-2" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TEw+VxL0U7qTzggDJn/xRdlvNjpaCa4dSJtFw8so/KSoDALs8qsTA6ZG2nS3aO6lS6DLmUXZYc3Ef10AfmEzilLoJlgxGukSdDCSWTNivrGsJFVDDsjsGNWjNga/ncFf">
                         <div class="mbr-form-row">
                             <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                                 <template data-form-alert="" type="amp-mustache">Оформление успешно!</template>
