--- a/mobirise/offline.html
+++ b/mobirise/offline.html
@@ -66,5 +66,5 @@ body{font-family: Roboto;}blockquote{border-color: #312a68;}div[submit-success] 
 
   
   
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section></body>
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section></body>
 </html>
